<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<repositories>
    <repository>
      <id>theTipTop_microservice</id>
      <name>theTipTop microservice</name>
      <url>https://nexus.dsp4-5archio19-ah-je-gh-yb.fr</url>
    </repository>
    
  </repositories>
     <distributionManagement>
       <repository>
	      <id>theTipTop_microservice</id>
	      <name>theTipTop microservice</name>
	      <url>https://nexus.dsp4-5archio19-ah-je-gh-yb.fr</url>
    	</repository>
    </distributionManagement>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.4.2</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.dsp</groupId>
	<artifactId>theTipTop</artifactId>
	<version>0.0.5</version>
	<name>theTipTop</name>
	<description>microservice for theTipTop</description>
	<packaging>war</packaging>
	<properties>
		<java.version>11</java.version>
	</properties>
	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.apache.maven/maven-repository-metadata -->
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-repository-metadata</artifactId>
			<version>3.8.1</version>
		</dependency>

	
		<dependency>
		    <groupId>org.eclipse.persistence</groupId>
		    <artifactId>javax.persistence</artifactId>
		    <version>2.2.1</version>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
		    <groupId>org.projectlombok</groupId>
		    <artifactId>lombok</artifactId>
		    <scope>provided</scope>
		</dependency>
	
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
		</dependency>
		<dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-validation</artifactId>
    	</dependency>
		<dependency>
	    	<groupId>org.springframework.boot</groupId>
	    	<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
		    <groupId>io.springfox</groupId>
		    <artifactId>springfox-boot-starter</artifactId>
		    <version>3.0.0</version>
		</dependency>
		<dependency>
		  <groupId>org.springframework.boot</groupId>
		   <artifactId>spring-boot-starter-tomcat</artifactId>
		   <scope>provided</scope>
		</dependency>
				 
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-client</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
			<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.keycloak/keycloak-spring-boot-starter -->
		<dependency>
		    <groupId>org.keycloak</groupId>
		    <artifactId>keycloak-spring-boot-starter</artifactId>
		</dependency>
		
	       <!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
		<dependency>
		    <groupId>org.sonarsource.scanner.maven</groupId>
		    <artifactId>sonar-maven-plugin</artifactId>
		    <version>3.9.0.2155</version>
		</dependency>


		<dependency>
     		<groupId>org.sonarsource.sonarqube</groupId>
      		<artifactId>sonar-plugin-api</artifactId>
     		<version>9.0.0.45539</version>
      		<scope>provided</scope>
    	</dependency>
    <dependency>
      <!-- packaged with the plugin -->
      <groupId>commons-lang</groupId>
      <artifactId>commons-lang</artifactId>
      <version>2.6</version>
    </dependency>


    <!-- unit tests -->
    <dependency>
      <groupId>org.sonarsource.sonarqube</groupId>
      <artifactId>sonar-testing-harness</artifactId>
       <version>9.0.0.45539</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
	

	</dependencies>

	<dependencyManagement>
	    <dependencies>
	        <dependency>
	            <groupId>org.keycloak.bom</groupId>
	            <artifactId>keycloak-adapter-bom</artifactId>
	            <version>14.0.0</version>
	            <type>pom</type>
	            <scope>import</scope>
	        </dependency>       
	    </dependencies>
	</dependencyManagement>
	<build>
		<finalName>theTipTop</finalName>
		<plugins>
			  <plugin>
	            <groupId>org.springframework.boot</groupId>
	            <artifactId>spring-boot-maven-plugin</artifactId>
        	</plugin>
			<plugin>
    			<groupId>org.apache.maven.plugins</groupId>
    			<artifactId>maven-compiler-plugin</artifactId>
    			<configuration>
			        <fork>true</fork>
			        <compilerArgs>
			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
			        </compilerArgs>
	        		<annotationProcessorPaths>
		            	<path>
		                	<groupId>org.projectlombok</groupId>
		                	<artifactId>lombok</artifactId>
		                	<version>1.18.16</version>
		           		</path>
	        		</annotationProcessorPaths>
    			</configuration>
			</plugin>	
			
			<plugin>
	        <groupId>org.sonarsource.sonar-packaging-maven-plugin</groupId>
	        <artifactId>sonar-packaging-maven-plugin</artifactId>
	        <version>1.18.0.372</version>
	        <extensions>true</extensions>
	        <configuration>
	          <pluginKey>example</pluginKey>
	          <pluginClass>org.sonarsource.plugins.example.ExamplePlugin</pluginClass>
	        </configuration>
      		</plugin>
		</plugins>
	</build>
	
	<profiles>

        <profile>
            <id>dev</id>
            <properties>
                <activatedProperties>dev</activatedProperties>
            </properties>
        </profile>

 		<profile>
            <id>local</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <activatedProperties>dev</activatedProperties>
            </properties>
        </profile>
        
        <profile>
            <id>prod</id>
            <properties>
                <activatedProperties>prod</activatedProperties>
            </properties>
        </profile>
        <profile>
            <id>sonar</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        <properties>
        	 <activatedProperties>sonar</activatedProperties>
  			<sonar.projectKey>theTipTop_microservice</sonar.projectKey>
  			<sonar.host.url>https://sonarqube.dsp4-5archio19-ah-je-gh-yb.fr</sonar.host.url>
  			<sonar.login>a18893b321796b20b7338f3add7dd4653f1f4a54</sonar.login>
  			
		</properties>
        </profile>
    </profiles>

</project>
